hphp/hack/test/typecheck/reserved_name2.php
<?hh

namespace Foo;

class void {}
